infra/k8s-aws/ingress-nginx-controler.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: kube-system
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: nginx-ingress-controller
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/part-of: kube-system
spec:
  ports:
    - name: port-1
      protocol: TCP
      port: 80
      targetPort: 80
    - name: port-2
      protocol: TCP
      port: 443
      targetPort: 80
    - name: port-3
      protocol: TCP
      port: 8443
      targetPort: 80
  selector:
    addonmanager.kubernetes.io/mode: Reconcile
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/part-of: kube-system
  type: ClusterIP
  sessionAffinity: None
